--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,4 @@
+{deps_dir, "../"}.
 {deps, [
   {rabbit_common, ".*", {git, "git://github.com/jbrisbin/rabbit_common.git", {tag, "rabbitmq-3.5.0"}}}
 ]}.
